Finish basic layout and task cards

--- a/src/index.html
+++ b/src/index.html
@@ -29,23 +29,12 @@
           NAME
         </div>
       </div>
-      <div class="sub-header">
-        <div>
-          <i>LOGO</i>
-          <div>
-            <p>Hi there,</p>
-            <p>NAME (@handle)</p>
-          </div>
-        </div>
-        <div>
-          <button type="button">New</button>
-          <button type="button">Upload</button>
-          <button type="button">Share</button>
-        </div>
-      </div>
       <div class="content">
         <div class="content-container">
-          <h3>Your Tasks</h3>
+          <div>
+            <h3>Your Tasks</h3>
+            <button class="add-button" id="add-button"></button>
+          </div>
           <div class="card-container" id="card-container">
           </div>
         </div>
