Add div for done tasks

--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,9 @@
           </div>
           <div class="card-container" id="card-container">
           </div>
+          <div class="card-container" id="done-card-container">
+            <h3>Done Tasks</h3>
+          </div>
         </div>
       </div>
     </main>
