Apply functions to buttons and format date

--- a/src/index.html
+++ b/src/index.html
@@ -11,34 +11,19 @@
         </div>
       </div>
       <div class="header">
-        <div class="search-container">
-          <form action="" class="searchbar">
-            <button type="submit">
-              <i>LUPE</i>
-            </button>
-            <input type="text" name="search">
-          </form>
-        </div>
-        <div>
-          <i>GLOCKE</i>
-        </div>
-        <div>
-          LOGO
-        </div>
-        <div>
-          NAME
-        </div>
       </div>
-      <div class="content">
-        <div class="content-container">
+      <div class="content" id="content">
+        <div class="content-container" id="content-container">
           <div>
             <h3>Your Tasks</h3>
             <button class="add-button" id="add-button"></button>
           </div>
           <div class="card-container" id="card-container">
           </div>
-          <div class="card-container" id="done-card-container">
+          <div>
             <h3>Done Tasks</h3>
+          </div>
+          <div class="card-container" id="done-card-container">
           </div>
         </div>
       </div>
