--- a/src/index.html
+++ b/src/index.html
@@ -1,30 +1,32 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en-us">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>To Do List</title>
   </head>
   <body>
     <main>
       <div class="navbar" id="navbar">
         <div class="nav-elements" id="nav-elements">
+          <div class="nav-head">
+            <img
+              src="file:///home/tkonzok/the-odin-project/repos/odin-to-do-list/src/menu.svg"
+            /><span id="head">Projects</span>
+          </div>
         </div>
       </div>
-      <div class="header">
-      </div>
+      <div class="header"></div>
       <div class="content" id="content">
         <div class="content-container" id="content-container">
           <div>
             <h3>Your Tasks</h3>
             <button class="add-button" id="add-button"></button>
           </div>
-          <div class="card-container" id="card-container">
-          </div>
+          <div class="card-container" id="card-container"></div>
           <div>
             <h3>Done Tasks</h3>
           </div>
-          <div class="card-container" id="done-card-container">
-          </div>
+          <div class="card-container" id="done-card-container"></div>
         </div>
       </div>
     </main>
